# nuclideParser

./: .gitignore  .gitmodules  .~lock.outlog.ods#  CMakeLists.txt  LICENSE  README.md  configure.xml  form_output.cpp  main.cpp  nuclide_class.h  outlog.csv  outlog.ods  parse.cpp
.github/workflows/: main.yml
Xmls/: 87.xml  OneNuclide.xml  add.xml  chain (copy).xml  chain.xml  chain_copy.xml  chain_l1.xml  chain_l1_p9.xml  chain_l1_u8.xml  chain_l2.xml  chain_l2_p9.xml  chain_l2_u8.xml  chain_l3.xml  chain_l3_p9.xml  chain_l3_u8.xml  chain_simple.xml  chain_t.xml  chainf.xml  configure.xml  dchain_u235_l1.xml  inpmaterials.xml  materials.xml  materials1.xml  materials_res.xml  materials_res1.xml  materials_test.xml  materialsi.xml  materialso.xml  materialso1.xml  materialsp1.xml  materialsp3.xml  materialspf.xml  materialsu5.xml  new.xml  nuclide.xml  nuclides.xml  outmaterials.xml  reactions.xml  reactions_XMAS172.xml  reactions_new.xml  (+2 more)
bptest/: .bptest.pro.swp  bptest.pro  chain.cpp  chain.h  chain_simple.xml  configure.cpp  configure.h  configure.xml  filter.cpp  filter.h  functionals.cpp  functionals.h  main.cpp  materials.cpp  materials.h  materialso.xml  matrix.cpp  matrix.h  nuclide.cpp  nuclide.h  outlog.csv  parse.cpp  parse.h  reactions.cpp  reactions.h  reactions.xml  timeproc.h  uncertainty.cpp
build-test/: CMakeLists.txt
include/openbps/: chain.h  configure.h  executer.h  functionals.h  matrix.h  nuclide.h  parse.h  reactions.h
src/: chain.cpp  chain.h  configure.cpp  configure.h  executer.cpp  executer.h  form_output.cpp  functionals.cpp  functionals.h  main.cpp  materials.cpp  materials.h  matrix.cpp  nuclide.cpp  nuclide_class.h  parse.cpp  parse.h  reactions.cpp  reactions.h
test/: test.cpp  test.sh
